<resources>

    <!-- common -->
    <string name="app_name">WebCast</string>

    <string name="activity_name_browser">@string/app_name</string>
    <string name="activity_name_video">WebCast Video Player</string>
    <string name="activity_name_exoairplayersender">ExoAirPlayer sender</string>
    <string name="activity_name_hlsproxyconfiguration">HLS-Proxy configuration</string>

    <string translatable="false" name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.77 Safari/537.36</string>

    <!-- BrowserActivity -->
    <string name="action_bookmark">Bookmark Webpage</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_videos">Videos</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="title_intent_chooser">Watch video in:</string>

    <!-- SettingsActivity -->
    <string translatable="false" name="pref_settings_key">settings_key</string>
    <string name="pref_settings_title">WebCast Settings</string>

    <!-- SettingsActivity: Video Player -->
    <string name="pref_videoplayer_array_names_1">internal w/ Chromecast sender</string>
    <string name="pref_videoplayer_array_names_2">external</string>
    <string name="pref_videoplayer_array_names_3">@string/activity_name_exoairplayersender</string>
    <string name="pref_videoplayer_array_names_4">@string/activity_name_hlsproxyconfiguration</string>

    <string translatable="false" name="pref_videoplayer_array_values_1">internal</string>
    <string translatable="false" name="pref_videoplayer_array_values_2">external</string>
    <string translatable="false" name="pref_videoplayer_array_values_3">exoairplayer</string>
    <string translatable="false" name="pref_videoplayer_array_values_4">hlsproxy</string>

    <string-array name="pref_videoplayer_array_names">
        <item>@string/pref_videoplayer_array_names_1</item>
        <item>@string/pref_videoplayer_array_names_2</item>
        <item>@string/pref_videoplayer_array_names_3</item>
        <item>@string/pref_videoplayer_array_names_4</item>
    </string-array>

    <string-array name="pref_videoplayer_array_values">
        <item>@string/pref_videoplayer_array_values_1</item>
        <item>@string/pref_videoplayer_array_values_2</item>
        <item>@string/pref_videoplayer_array_values_3</item>
        <item>@string/pref_videoplayer_array_values_4</item>
    </string-array>

    <!-- SettingsActivity: Video Player -->
    <string translatable="false" name="pref_videoplayer_key">pref_videoplayer</string>
    <string translatable="false" name="pref_videoplayer_default">@string/pref_videoplayer_array_values_1</string>
    <string name="pref_videoplayer_title">Video Player</string>
    <string name="pref_videoplayer_summary">watch videos using..</string>

    <!-- SettingsActivity: Page Load Behavior -->
    <string name="pref_pageloadbehavior_array_name_cancel">Cancel</string>
    <string name="pref_pageloadbehavior_array_name_proceed">Proceed</string>
    <string name="pref_pageloadbehavior_array_name_ask">Ask</string>

    <string translatable="false" name="pref_pageloadbehavior_array_value_cancel">cancel</string>
    <string translatable="false" name="pref_pageloadbehavior_array_value_proceed">proceed</string>
    <string translatable="false" name="pref_pageloadbehavior_array_value_ask">ask</string>

    <string-array name="pref_pageloadbehavior_array_names">
        <item>@string/pref_pageloadbehavior_array_name_cancel</item>
        <item>@string/pref_pageloadbehavior_array_name_proceed</item>
        <item>@string/pref_pageloadbehavior_array_name_ask</item>
    </string-array>

    <string-array name="pref_pageloadbehavior_array_values">
        <item>@string/pref_pageloadbehavior_array_value_cancel</item>
        <item>@string/pref_pageloadbehavior_array_value_proceed</item>
        <item>@string/pref_pageloadbehavior_array_value_ask</item>
    </string-array>

    <!-- SettingsActivity: Page Load Behavior on HTTPS Certificate Error -->
    <string translatable="false" name="pref_badssl_pageloadbehavior_key">pref_badssl_pageloadbehavior</string>
    <string translatable="false" name="pref_badssl_pageloadbehavior_default">@string/pref_pageloadbehavior_array_value_cancel</string>
    <string name="pref_badssl_pageloadbehavior_title">On HTTPS Certificate Error</string>
    <string name="pref_badssl_pageloadbehavior_summary">choose page load behavior..</string>

    <!-- SettingsActivity: Enable Remote Debugger -->
    <string translatable="false" name="pref_enableremotedebugger_key">pref_enableremotedebugger</string>
    <string translatable="false" name="pref_enableremotedebugger_default">false</string>
    <string name="pref_enableremotedebugger_title">Enable Remote Debugger</string>
    <string name="pref_enableremotedebugger_summary_on" >WebView can be inspected on LAN</string>
    <string name="pref_enableremotedebugger_summary_off">WebView cannot be inspected on LAN</string>

    <!-- SettingsActivity: Enable AdBlock -->
    <string translatable="false" name="pref_enableadblock_key">pref_enableadblock</string>
    <string translatable="false" name="pref_enableadblock_default">true</string>
    <string name="pref_enableadblock_title">Enable AdBlock</string>
    <string name="pref_enableadblock_summary_on" >Blocking hosts that serve: ads, trackers, malware, spam</string>
    <string name="pref_enableadblock_summary_off">Allowing requests to all hosts</string>

    <!-- ExoAirPlayerSenderActivity -->
    <string translatable="false" name="pref_exoairplayersender_persistentcookies_key">pref_exoairplayersender_persistentcookies</string>
    <string translatable="false" name="url_exoairplayersender_es6">http://webcast-reloaded.surge.sh/airplay_sender.html</string>
    <string translatable="false" name="url_exoairplayersender_es5">http://webcast-reloaded.surge.sh/airplay_sender.es5.html</string>

    <!-- HlsProxyConfigurationActivity -->
    <string translatable="false" name="pref_hlsproxyconfiguration_persistentcookies_key">pref_hlsproxyconfiguration_persistentcookies</string>
    <string translatable="false" name="url_hlsproxyconfiguration">http://webcast-reloaded.surge.sh/proxy.html</string>

    <!-- VideoActivity -->
    <string translatable="false" name="cast_receiver_id">6BFED418</string>

    <string name="media_route_menu_title">Cast</string>
    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>

    <!-- AlertDialog: Page Load Behavior on HTTPS Certificate Error -->
    <string name="alertdialog_badssl_pageloadbehavior_title">HTTPS Certificate Error</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_date_invalid">The date of the certificate is invalid.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_expired">The certificate has expired.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_idmismatch">Hostname mismatch.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_invalid">A generic error occurred.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_notyetvalid">The certificate is not yet valid.</string>
    <string name="alertdialog_badssl_pageloadbehavior_reason_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_url">URL:</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_button_positive">@string/pref_pageloadbehavior_array_name_proceed</string>
    <string name="alertdialog_badssl_pageloadbehavior_label_button_negative">@string/pref_pageloadbehavior_array_name_cancel</string>

</resources>
