<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:key="@string/pref_settings_key"
    android:title="@string/pref_settings_title">

    <ListPreference
      android:key="@string/pref_videoplayer_key"
      android:title="@string/pref_videoplayer_title"
      android:summary="@string/pref_videoplayer_summary"
      android:entries="@array/pref_videoplayer_array_names"
      android:entryValues="@array/pref_videoplayer_array_values"
      android:defaultValue="@string/pref_videoplayer_default" />

    <ListPreference
      android:key="@string/pref_badssl_pageloadbehavior_key"
      android:title="@string/pref_badssl_pageloadbehavior_title"
      android:summary="@string/pref_badssl_pageloadbehavior_summary"
      android:entries="@array/pref_pageloadbehavior_array_names"
      android:entryValues="@array/pref_pageloadbehavior_array_values"
      android:defaultValue="@string/pref_badssl_pageloadbehavior_default" />

    <CheckBoxPreference
      android:key="@string/pref_enableremotedebugger_key"
      android:title="@string/pref_enableremotedebugger_title"
      android:summaryOn="@string/pref_enableremotedebugger_summary_on"
      android:summaryOff="@string/pref_enableremotedebugger_summary_off"
      android:defaultValue="@string/pref_enableremotedebugger_default" />

  </PreferenceCategory>
</PreferenceScreen>
